--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,9 +24,9 @@ h3 { /* Header 3 */
   text-align: center;
 }
 h4 { /* Header 4 */
-  text-align: left;
   font-size: 20px;
-  font-weight: lighter;
+    text-align: center;
+
 }
 p{
   font-size:20px;
